--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
     "core-js": "^3.46.0",
+    "crypto-js": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.1.0"
   },
